--- a/platform_code/assessment/templates/assessment/import-json-scoring.html
+++ b/platform_code/assessment/templates/assessment/import-json-scoring.html
@@ -3,5 +3,5 @@
 
 {% block admin_change_form_document_ready %}
 {{ block.super }}
-<script type="text/javascript" src="{% static 'app/js/scoring_ajax.js' %}"></script>
+<script src="{% static 'app/js/scoring_ajax.js' %}" type="text/javascript"></script>
 {% endblock %}
