--- a/platform_code/assessment/templates/assessment/organisation/member/leave-organisation.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/leave-organisation.html
@@ -3,8 +3,8 @@
 
 <div class="content-modal-leave-organisation">
     <div class="modal-header">
-        <h4 class="modal-title" >{% trans "Are you sure you want to leave the organisation?" %} </h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">{% trans "Are you sure you want to leave the organisation?" %} </h4>
+        <button class="close" data-dismiss="modal" type="button">&times;</button>
     </div>
     <div class="modal-body-delete">
         <p>{% trans "If you leave the organisation, you will not be able to access its evaluations." %}</p>
@@ -13,15 +13,15 @@
 
     <div class="modal-footer self-center">
         <form action="{% url 'assessment:leave-organisation' organisation.id %}"
-              method="post" id="leaveOrganisation{{member.id}}">
+              id="leaveOrganisation{{member.id}}" method="post">
             {% csrf_token %}
             <button class="btn btn-primary same-size-250 margin-auto"
                     type="submit">
                 {% trans 'Yes' %}
             </button>
-            <button type="button" class="btn btn-danger same-size-250 margin-auto right-button"
-                data-dismiss="modal">{% trans 'Cancel' %}
-        </button>
+            <button class="btn btn-danger same-size-250 margin-auto right-button" data-dismiss="modal"
+                    type="button">{% trans 'Cancel' %}
+            </button>
         </form>
 
     </div>
