--- a/platform_code/home/templates/home/about.html
+++ b/platform_code/home/templates/home/about.html
@@ -10,45 +10,89 @@
 <h1>A propos de Substra Foundation</h1>
 
 <div class="container" style="width: 80%; margin-left: auto; margin-right: auto;">
-    <p>Substra Foundation est une organisation à but non lucratif indépendante, dédiée à l’exploration d’approches de la data science sûres, responsables et protectrices des données sensibles, et au <strong>développement d’écosystèmes de data science de confiance</strong>. Elle travaille en particulier sur les collaborations multi-partenaires en data science. Elle promeut, contribue et anime le projet open source Substra qui permet l'orchestration décentralisée, sécurisée, et traçable de tâches de machine learning dans un cadre protecteur de la confidentialité des données. Elle se donne pour objectif de :</p>
+    <p>Substra Foundation est une organisation à but non lucratif indépendante, dédiée à l’exploration d’approches de la
+        data science sûres, responsables et protectrices des données sensibles, et au <strong>développement
+            d’écosystèmes de data science de confiance</strong>. Elle travaille en particulier sur les collaborations
+        multi-partenaires en data science. Elle promeut, contribue et anime le projet open source Substra qui permet
+        l'orchestration décentralisée, sécurisée, et traçable de tâches de machine learning dans un cadre protecteur de
+        la confidentialité des données. Elle se donne pour objectif de :</p>
     <ul>
         <li class="li-with-disc">Collecter des retours sur l’usage de Substra</li>
-        <li class="li-with-disc">Synthétiser les suggestions d’évolutions et proposer une roadmap commune de développement</li>
+        <li class="li-with-disc">Synthétiser les suggestions d’évolutions et proposer une roadmap commune de
+            développement
+        </li>
         <li class="li-with-disc">Héberger les dépôts Github de Substra</li>
-        <li class="li-with-disc">Animer des groupes de travail sur les collaborations multi-partenaires en data science</li>
-        <li class="li-with-disc">Proposer de nouvelles idées et pratiques pour des approches responsables et de confiance de la data science</li>
+        <li class="li-with-disc">Animer des groupes de travail sur les collaborations multi-partenaires en data
+            science
+        </li>
+        <li class="li-with-disc">Proposer de nouvelles idées et pratiques pour des approches responsables et de
+            confiance de la data science
+        </li>
     </ul>
 
-    <p>Le premier contributeur et partenaire-clef de Substra Foundation est <a href="https://owkin.com/" target="_blank" >Owkin</a>, une start-up spécialisée en machine learning dans le domaine médical, qui dédie une équipe technique au développement de la première version de Substra Framework.</p>
+    <p>Le premier contributeur et partenaire-clef de Substra Foundation est <a href="https://owkin.com/"
+                                                                               target="_blank">Owkin</a>, une start-up
+        spécialisée en machine learning dans le domaine médical, qui dédie une équipe technique au développement de la
+        première version de Substra Framework.</p>
 
-    <p>Substra Foundation se donne notamment pour objectif de fédérer et animer une communauté active de contributeurs et d'utilisateurs du framework Substra.</p>
+    <p>Substra Foundation se donne notamment pour objectif de fédérer et animer une communauté active de contributeurs
+        et d'utilisateurs du framework Substra.</p>
 
     <h3 class="about-subtitle">Pourquoi ?</h3>
 
-    <p>Un nouvel espace émerge au croisement entre expansion des algorithmes d'IA dans les organisations et inquiétudes du public sur les données privées et le manque de transparence des algorithmes. Ce sont deux tendances puissantes, qui ne ralentiront pas, et<strong> qui commencent à se percuter</strong>.</p>
-    <p>Cela ouvre donc un espace de recherche et d'innovation sur les approches, les méthodologies et les outils qui permettront de <strong>conjuguer les deux</strong>. Il s'agit de libérer plus de données pour la recherche et pour combler le "manque à savoir" dans de nombreuses disciplines, tout en assurant un haut niveau de protection aux données personnelles ou sensibles, et en garantissant la qualité et la transparence des travaux de data science. Défi immense et passionnant !</p>
-    <p>Le framework open source Substra s'inscrit dans ce mouvement de conjugaison des 2 tendances décrites, en permettant d'<strong>orchestrer de manière sécurisée et transparente des projets de data science entre plusieurs partenaires</strong>. Il est compatible avec des architectures décentralisées où les données restent locales et ne sont jamais transmises.<br>
-        C'est une petite pièce du problème, mais qui ouvre déjà des cas d'usage prometteur (<a href="https://www.substra.ai/fr/melloddy-project" target="_blank">coopération entre compétiteurs</a> par exemple). Un enjeu est aussi de favoriser la complémentarité et la compatibilité avec les techniques et outils dites 'privacy-enhancing' (e.g. differential privacy, SMPC, FHE...) sur lesquels la communauté travaille.</p>
-    <img class="centered-image middle-width"  src="{% static 'image/Illustration_1.png' %}" alt="image">
+    <p>Un nouvel espace émerge au croisement entre expansion des algorithmes d'IA dans les organisations et inquiétudes
+        du public sur les données privées et le manque de transparence des algorithmes. Ce sont deux tendances
+        puissantes, qui ne ralentiront pas, et<strong> qui commencent à se percuter</strong>.</p>
+    <p>Cela ouvre donc un espace de recherche et d'innovation sur les approches, les méthodologies et les outils qui
+        permettront de <strong>conjuguer les deux</strong>. Il s'agit de libérer plus de données pour la recherche et
+        pour combler le "manque à savoir" dans de nombreuses disciplines, tout en assurant un haut niveau de protection
+        aux données personnelles ou sensibles, et en garantissant la qualité et la transparence des travaux de data
+        science. Défi immense et passionnant !</p>
+    <p>Le framework open source Substra s'inscrit dans ce mouvement de conjugaison des 2 tendances décrites, en
+        permettant d'<strong>orchestrer de manière sécurisée et transparente des projets de data science entre plusieurs
+            partenaires</strong>. Il est compatible avec des architectures décentralisées où les données restent locales
+        et ne sont jamais transmises.<br>
+        C'est une petite pièce du problème, mais qui ouvre déjà des cas d'usage prometteur (<a
+                href="https://www.substra.ai/fr/melloddy-project" target="_blank">coopération entre compétiteurs</a> par
+        exemple). Un enjeu est aussi de favoriser la complémentarité et la compatibilité avec les techniques et outils
+        dites 'privacy-enhancing' (e.g. differential privacy, SMPC, FHE...) sur lesquels la communauté travaille.</p>
+    <img alt="image" class="centered-image middle-width" src="{% static 'image/Illustration_1.png' %}">
 
     <h3 class="about-subtitle">Lignes d'action</h3>
-    <p>Nous sommes une équipe de passionnés, engagés, qui souhaite rassembler une communauté de contributeurs et de parties prenantes intéressées, et participer à l’effort collectif de recherche et d’innovation dans le domaine de la data science de confiance. Nous nous concentrons sur les lignes d’action suivante :</p>
+    <p>Nous sommes une équipe de passionnés, engagés, qui souhaite rassembler une communauté de contributeurs et de
+        parties prenantes intéressées, et participer à l’effort collectif de recherche et d’innovation dans le domaine
+        de la data science de confiance. Nous nous concentrons sur les lignes d’action suivante :</p>
     <div class="row" style="columns: 3">
         <div class="column">
-            <img class="centered-image middle-width"  src="{% static 'image/Pictos_Substra_Jaune_RVB_Data science collaborative.png' %}" alt="image">
+            <img alt="image"
+                 class="centered-image middle-width" src="{% static 'image/Pictos_Substra_Jaune_RVB_Data science collaborative.png' %}">
             <p class="text-center"><strong>Consortiums industriels de R&D</strong></p>
-            <p>Nous sommes engagés dans des consortiums de recherche (voir pages <a href="https://asparagus-octopus-cw7y.squarespace.com/fr/healthchain-project" target="_blank">HealthChain</a> et <a href="https://asparagus-octopus-cw7y.squarespace.com/fr/melloddy-project" target="_blank">Melloddy</a>) dédiés à de nouvelles collaborations en data science sur des données sensibles</p>
+            <p>Nous sommes engagés dans des consortiums de recherche (voir pages <a
+                    href="https://asparagus-octopus-cw7y.squarespace.com/fr/healthchain-project" target="_blank">HealthChain</a>
+                et <a href="https://asparagus-octopus-cw7y.squarespace.com/fr/melloddy-project"
+                      target="_blank">Melloddy</a>) dédiés à de nouvelles collaborations en data science sur des données
+                sensibles</p>
 
         </div>
         <div class="column">
-            <img class="centered-image middle-width"  src="{% static 'image/Pictos_Substra_Vert_RVB_Application.png' %}" alt="image">
+            <img alt="image" class="centered-image middle-width"
+                 src="{% static 'image/Pictos_Substra_Vert_RVB_Application.png' %}">
             <p class="text-center"><strong>Initiative open source Substra Framework</strong></p>
-            <p>Notre rôle est de promouvoir, contribuer et animer le projet open source Substra. Substra est un framework pour l’orchestration sécurisée, traçable et décentralisée de tâches de ML. Il est basé sur Hyperledger Fabric, le framework DLT de référence hébergé par la Fondation Linux. La 1ère version de Substra a été développée par Owkin et publiée sous licence Apache 2.0 pour ouvrir les collaborations open source.</p>
+            <p>Notre rôle est de promouvoir, contribuer et animer le projet open source Substra. Substra est un
+                framework pour l’orchestration sécurisée, traçable et décentralisée de tâches de ML. Il est basé sur
+                Hyperledger Fabric, le framework DLT de référence hébergé par la Fondation Linux. La 1ère version de
+                Substra a été développée par Owkin et publiée sous licence Apache 2.0 pour ouvrir les collaborations
+                open source.</p>
         </div>
         <div class="column">
-            <img class="centered-image middle-width"  src="{% static 'image/Pictos_Substra_Rose-Orange_RVB_Data science responsable et de confiance.png' %}" alt="image">
+            <img alt="image"
+                 class="centered-image middle-width"
+                 src="{% static 'image/Pictos_Substra_Rose-Orange_RVB_Data science responsable et de confiance.png' %}">
             <p class="text-center"><strong>Contribuer à l’effort collectif</strong></p>
-            <p>Nous contribuons à l’effort collectif de la communauté ‘IA de confiance’. Nos sujets d’étude : <a href="https://github.com/SubstraFoundation/distributed-learning-contributivity" target="_blank">contributivité d’un jeu de données à un modèle</a>, certification du mode de validation d’un modèle, scoring des pratiques de “data science responsable”.</p>
+            <p>Nous contribuons à l’effort collectif de la communauté ‘IA de confiance’. Nos sujets d’étude : <a
+                    href="https://github.com/SubstraFoundation/distributed-learning-contributivity" target="_blank">contributivité
+                d’un jeu de données à un modèle</a>, certification du mode de validation d’un modèle, scoring des
+                pratiques de “data science responsable”.</p>
         </div>
 
     </div>
