--- a/platform_code/home/templates/home/registration/password_reset_complete.html
+++ b/platform_code/home/templates/home/registration/password_reset_complete.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container evaluation-title">
-  <h3  class="title-pills">{% trans "The password has been changed!" %}</h3>
-  <p><a href="{% url 'home:login' %}" class="btn btn-primary">{% trans "Login" %}</a></p>
+    <h3 class="title-pills">{% trans "The password has been changed!" %}</h3>
+    <p><a class="btn btn-primary" href="{% url 'home:login' %}">{% trans "Login" %}</a></p>
 </div>
 {% endblock %}
