--- a/platform_code/home/templates/home/registration/password_reset_form.html
+++ b/platform_code/home/templates/home/registration/password_reset_form.html
@@ -4,15 +4,16 @@
 {% block content %}
 
 <div class="container evaluation-title">
-  <h3  class="title-pills">{% trans "Forgotten password" %}</h3>
-  <form method="post"class="margin-50">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <div class="margin-50">
-    <button class="btn btn-primary" type="submit">{% trans "Reset" %}</button>
-    <a class="btn btn-danger" href="{% url 'home:user-profile-settings' %}">{% trans "Cancel" %}</a>
-      </div>
-  </form>
+    <h3 class="title-pills">{% trans "Forgotten password" %}</h3>
+    <form class="margin-50" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <div class="margin-50">
+            <button class="btn btn-primary"
+                    type="submit">{% trans "Reset" %}</button>
+            <a class="btn btn-danger" href="{% url 'home:user-profile-settings' %}">{% trans "Cancel" %}</a>
+        </div>
+    </form>
 </div>
 
 {% endblock %}
