--- a/platform_code/home/templates/home/settings-password.html
+++ b/platform_code/home/templates/home/settings-password.html
@@ -2,30 +2,30 @@
 {% load add_attr %}
 {% load i18n %}
 
-<h3 class="settings-subtitle" style="display: flex;" >{% trans "Change password" %}
+<h3 class="settings-subtitle" style="display: flex;">{% trans "Change password" %}
     <div class="help-tip help-tip-right" style="margin-left: 20px;">
         <p>{% trans "Your password must contain at least 8 characters, with at least one number and one letter" %}</p>
     </div>
 </h3>
 
 {% if messages %}
-<ul id="div_messages" class="messages">
+<ul class="messages" id="div_messages">
     {% for message in messages %}
-    <li  class="alert-danger ">{{ message }}</li>
+    <li class="alert-danger ">{{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
 
 <div class="body change-password-form margin-50">
     <div class="column">
-        <form method="post" id="ChangePassword">
+        <form id="ChangePassword" method="post">
             {% csrf_token %}
             {% for field in change_password_form %}
-                <span class="float-left">{{ field.label_tag }}</span>
-                 <p class="max-width">{{field}}</p>
+            <span class="float-left">{{ field.label_tag }}</span>
+            <p class="max-width">{{field}}</p>
             {% endfor %}
-            <button type="button" onclick="submitUserSettingsPasswordForm('ChangePassword')"
-                    class="btn btn-primary">{% trans "Modify" %}
+            <button class="btn btn-primary" onclick="submitUserSettingsPasswordForm('ChangePassword')"
+                    type="button">{% trans "Modify" %}
             </button>
         </form>
     </div>
