--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -1,141 +1,145 @@
 <!DOCTYPE html>
 {% load static %}
+{% load home_tags %}
 {% load i18n %}
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Substra Assessment</title>
     <link href="{% static 'image/favicon.ico' %}" rel="shortcut icon" type="image/png">
 
     <!-- TODO: cleanup!-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="{% static 'js/jquery-3.5.1.min.js' %}" >
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}" defer></script>
-    <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}" defer></script>
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" type="text/css" rel="stylesheet" >
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}" defer></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}" defer></script>
-    <script src="{% static 'js/bootstrap.modal.js' %}" defer></script>
-    <script src="{% static 'js/functions.js' %}" defer></script>
-    <link href="{% static 'css/element-card.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'css/base.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'css/summary.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'css/results.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'css/section-card.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'css/ubuntu-family.css' %}" type="text/css" rel="stylesheet" >
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{% static 'js/jquery-3.5.1.min.js' %}">
+    <script defer src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script defer src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" rel="stylesheet" type="text/css">
+    <script defer src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script defer src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script defer src="{% static 'js/bootstrap.modal.js' %}"></script>
+    <script defer src="{% static 'js/functions.js' %}"></script>
+    <link href="{% static 'css/element-card.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/summary.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/results.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/section-card.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/ubuntu-family.css' %}" rel="stylesheet" type="text/css">
 </head>
-<body class="navbar-is-fixed-top">
 
+<body class="navbar-is-fixed-top">
     <header>
-    <!--    Beta banner -->
+        <!--Beta banner-->
         <div class="ribbon"><span>Beta</span></div>
-        <nav class="navbar navbar-expand-lg  is-fixed-top" >
-        <div class="container">
-          <a class="navbar-brand" title="home" href="{% url 'home:homepage' %}" style="color: #FFF;">
-              <img class="logo-navbar" src="{% static 'image/Substra_Foundation_Logo_horizontal_fond.png' %}">
-          </a>
-          <button class="navbar-toggler icon-navbar" type="button" data-toggle="collapse"
-                  data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                  aria-label="Toggle navigation" id="navbar-button">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive" >
-            <ul class="navbar-nav ml-auto" >
-                {% if user.is_authenticated %}
-                    {% if user.is_staff %}
+        <nav class="navbar navbar-expand-lg  is-fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="{% url 'home:homepage' %}" style="color: #FFF;" title="home">
+                    <img class="logo-navbar" src="{% static 'image/Substra_Foundation_Logo_horizontal_fond.png' %}">
+                </a>
+                <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler icon-navbar" data-target="#navbarResponsive" data-toggle="collapse"
+                    id="navbar-button" type="button">
+                    <i aria-hidden="true" class="fa fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        {% if user.is_authenticated %}
+                        {% if user.is_staff %}
                         <li class="nav-item navbar-item">
-                         <a class="nav-link" href="{% url 'admin:index' %}"
-                            >{% trans "Admin" %}
-                         </a>
+                            <a class="nav-link" href="{% url 'admin:index' %}">
+                                {% trans "Admin" %}
+                            </a>
                         </li>
-                    {% endif %}
-                    <li class="nav-item navbar-item">
-                     <a class="nav-link" href="{% url 'home:user-profile' %}"
-                        >{% trans "My dashboard" %}
-                     </a>
-                    </li>
-                    <li class="nav-item navbar-item">
-                        <a class="nav-link" href="{% url 'home:resources' %}"
-                        >{% trans "Resources" %}</a>
-                    </li>
-                    <li class="nav-item navbar-item">
-                        <a class="nav-link" href="{% url 'home:faq' %}"
-                            >{% trans "FAQ" %}
-                        </a>
-                    </li>
-                    <li class="nav-item navbar-item">
-                     <a class="nav-link" href="{% url 'home:logout' %}"
-                        >{% trans "Logout" %}
-                     </a>
-                    </li>
-                {% else %}
-                    <li class="nav-item navbar-item">
-                        <a class="nav-link" href="{% url 'home:faq' %}"
-                            >{% trans "FAQ" %}
-                        </a>
-                    </li>
-                    {% if request.get_full_path == "/signup/" or request.get_full_path == "/legal-notices/" or request.get_full_path == "/faq/" or request.get_full_path == "/login/"%}
+                        {% endif %}
                         <li class="nav-item navbar-item">
-                         <a class="nav-link" href="{% url 'home:login' %}"
-                            >{% trans "Login" %}
-                         </a>
+                            <a class="nav-link" href="{% url 'home:user-profile' %}">
+                                {% trans "My dashboard" %}
+                            </a>
                         </li>
-                    {% else %}
                         <li class="nav-item navbar-item">
-                             <a class="nav-link" data-toggle="modal" href="{% url 'home:homepage' %}"
-                                data-target="#modal-login-user" >{% trans "Login" %}</a>
+                            <a class="nav-link" href="{% url 'home:resources' %}">
+                                {% trans "Resources" %}
+                            </a>
                         </li>
-                    {% endif %}
-                {% endif %}
-                </ul>
-              </div>
-        </div>
-      </nav>
+                        <li class="nav-item navbar-item">
+                            <a class="nav-link" href="{% url 'home:faq' %}">
+                                {% trans "FAQ" %}
+                            </a>
+                        </li>
+                        <li class="nav-item navbar-item">
+                            <a class="nav-link" href="{% url 'home:logout' %}">
+                                {% trans "Logout" %}
+                            </a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item navbar-item">
+                            <a class="nav-link" href="{% url 'home:faq' %}">
+                            {% trans "FAQ" %}
+                            </a>
+                        </li>
+                        {% if request.get_full_path|need_login_page %}
+                        <li class="nav-item navbar-item">
+                            <a class="nav-link" href="{% url 'home:login' %}">
+                            {% trans "Login" %}
+                            </a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item navbar-item">
+                            <a class="nav-link" data-target="#modal-login-user" data-toggle="modal"
+                                href="{% url 'home:homepage' %}">{% trans "Login" %}
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <div class="modal" id="modal-login-user" aria-hidden="true">
-      <div class="modal-dialog ">
-        <div class="modal-content">
-          {% include "home/login-modal.html" %}
+    <div aria-hidden="true" class="modal" id="modal-login-user">
+        <div class="modal-dialog ">
+            <div class="modal-content">
+                {% include "home/login-modal.html" %}
+            </div>
         </div>
-      </div>
     </div>
 
     <div id="page-container">
         <div class="content container" id="content-wrap">
-                {% block content %}
-                {% endblock %}
+            {% block content %}
+            {% endblock %}
         </div>
     </div>
 
-  <!-- Footer -->
-  <footer class="py-2 footer">
+    <!-- Footer -->
+    <footer class="py-2 footer">
         <div class="col-md-3 col-md-3-footer">
             {% if user.is_authenticated %}
-                <a href="{% url 'home:logout' %}" class="link-with-border">{% trans "Logout" %}</a>
+            <a class="link-with-border" href="{% url 'home:logout' %}">{% trans "Logout" %}</a>
             {% else %}
-                <a href="{% url 'home:signup' %}" class="link-with-border" >{% trans "Sign up" %}</a><br>
-                <a href="{% url 'home:login' %}" class="link-with-border">{% trans "Login" %}</a>
+            <a class="link-with-border" href="{% url 'home:signup' %}">{% trans "Sign up" %}</a><br>
+            <a class="link-with-border" href="{% url 'home:login' %}">{% trans "Login" %}</a>
             {% endif %}
         </div>
         <div class="col-md-3 col-md-3-footer">
-            <a href="{% url 'home:faq' %}" class="link-with-border" >{% trans "FAQ" %}</a>
+            <a class="link-with-border" href="{% url 'home:faq' %}">{% trans "FAQ" %}</a>
         </div>
         <div class="col-md-3 col-md-3-footer">
-            <a href="{% url 'home:legal-notices' %}" class="link-with-border" >{% trans "Legal notices" %}</a>
+            <a class="link-with-border" href="{% url 'home:legal-notices' %}">{% trans "Legal notices" %}</a>
         </div>
         <div class="col-md-3 col-md-3-footer">
-            <a href="https://twitter.com/Substra_org" target="_blank" class="fa fa-icon-footer fa-twitter"></a>
-            <a href="https://www.linkedin.com/company/substra/" target="_blank" class="fa fa-icon-footer fa-linkedin"></a>
-            <a href="https://github.com/SubstraFoundation" target="_blank" class="fa fa-icon-footer fa-github"></a>
-            <a href="mailto:hello.assessment@substra.org" target="_blank" class="fa fa-icon-footer fa-envelope"></a>
+            <a class="fa fa-icon-footer fa-twitter" href="https://twitter.com/Substra_org" target="_blank"></a>
+            <a class="fa fa-icon-footer fa-linkedin" href="https://www.linkedin.com/company/substra/"
+                target="_blank"></a>
+            <a class="fa fa-icon-footer fa-github" href="https://github.com/SubstraFoundation" target="_blank"></a>
+            <a class="fa fa-icon-footer fa-envelope" href="mailto:hello.assessment@substra.org" target="_blank"></a>
         </div>
-    <!-- /.container -->
-  </footer>
-  <script src="{% static 'js/jquery-3.5.1.min.js' %}" defer></script>
+    </footer>
+    <script defer src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 
 </body>
 </html>
