--- a/platform_code/assessment/templates/assessment/base-card-section.html
+++ b/platform_code/assessment/templates/assessment/base-card-section.html
@@ -4,43 +4,45 @@
 {% load i18n %}
 {% load markdownify %}
 
-<article class="card-section" >
+<article class="card-section">
     <div class="row margin-bot-30">
         <h5 class="section-card-title center" title="Section {{section.master_section.order_id}}">
             Section {{section.master_section.order_id}}
         </h5>
         <div class="progress progress-section margin-right-8"
              title="{% blocktrans with progression=section.user_progression %}{{ progression }}% done{% endblocktrans %}">
-            <div class="progress-bar progress-bar-section" role="progressbar"
-                 aria-valuenow="{{section.user_progression}}" style="width: {{section.user_progression}}%; background-color: #28a745;"
-                 title="{% blocktrans with progression=section.user_progression %}{{ progression }}% done {% endblocktrans %}"
-                 aria-valuemin="0" aria-valuemax="100" >
+            <div aria-valuemax="100" aria-valuemin="0"
+                 aria-valuenow="{{section.user_progression}}"
+                 class="progress-bar progress-bar-section"
+                 role="progressbar"
+                 style="width: {{section.user_progression}}%; background-color: #28a745;" title="{% blocktrans with progression=section.user_progression %}{{ progression }}% done {% endblocktrans %}">
             </div>
         </div>
     </div>
-    <p class="card-title-section center height-title" title="{% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}">
+    <p class="card-title-section center height-title"
+       title="{% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}">
         {% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}
     </p>
-    <div id="image" class="center" >
-      {% if forloop.counter == 1 %}
-          <img src="{% static 'image/section1.png' %}" class="card-img-top" title="card image" alt="Card image">
-      {% elif forloop.counter == 2 %}
-          <img src="{% static 'image/section2.png' %}" class="card-img-top" title="card image" alt="Card image">
-      {% elif forloop.counter == 3 %}
-          <img src="{% static 'image/section3.png' %}" class="card-img-top" title="card image" alt="Card image">
-      {% elif forloop.counter == 4 %}
-          <img src="{% static 'image/section4.png' %}" class="card-img-top" title="card image" alt="Card image">
-      {% elif forloop.counter == 5 %}
-          <img src="{% static 'image/section5.png' %}" class="card-img-top" title="card image" alt="Card image">
-      {% elif forloop.counter == 6 %}
-          <img src="{% static 'image/section6.png' %}" class="card-img-top" title="card image" alt="Card image">
-      {% else %}
-          <img src="{% static 'image/section7.png' %}" class="card-img-top" title="card image" alt="Card image">
-      {% endif %}
+    <div class="center" id="image">
+        {% if forloop.counter == 1 %}
+        <img alt="Card image" class="card-img-top" src="{% static 'image/section1.png' %}" title="card image">
+        {% elif forloop.counter == 2 %}
+        <img alt="Card image" class="card-img-top" src="{% static 'image/section2.png' %}" title="card image">
+        {% elif forloop.counter == 3 %}
+        <img alt="Card image" class="card-img-top" src="{% static 'image/section3.png' %}" title="card image">
+        {% elif forloop.counter == 4 %}
+        <img alt="Card image" class="card-img-top" src="{% static 'image/section4.png' %}" title="card image">
+        {% elif forloop.counter == 5 %}
+        <img alt="Card image" class="card-img-top" src="{% static 'image/section5.png' %}" title="card image">
+        {% elif forloop.counter == 6 %}
+        <img alt="Card image" class="card-img-top" src="{% static 'image/section6.png' %}" title="card image">
+        {% else %}
+        <img alt="Card image" class="card-img-top" src="{% static 'image/section7.png' %}" title="card image">
+        {% endif %}
     </div>
     <div class="card-body-section">
         <p class="card-text-section">{{section.master_section.description|markdownify}}</p>
-        <a href="{{ section.get_absolute_url }}"
-       class="btn btn-primary card-button-section">{% trans "Go to the section" %}</a>
+        <a class="btn btn-primary card-button-section"
+           href="{{ section.get_absolute_url }}">{% trans "Go to the section" %}</a>
     </div>
 </article>
