--- a/platform_code/assessment/templates/assessment/deletion-evaluation.html
+++ b/platform_code/assessment/templates/assessment/deletion-evaluation.html
@@ -2,21 +2,26 @@
 
 <div class="content-modal-delete">
 
-  <form  method='post' class="form" role="form"
-        action="{% url 'assessment:delete-evaluation' evaluation.organisation.id evaluation.slug evaluation.pk %}">
-    <div class="modal-header">
-        <h4 class="modal-title" >{% trans "Are you sure you want to delete the evaluation?" %} </h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-      <div class="modal-body-delete">
-        {% csrf_token %}
-        <p>{% trans "The evaluation deletion is definitive. You would not be able to retrieve your answers and your score." %}</p>
-      </div>
-      <div class="modal-footer">
-        <input type="submit" class="btn btn-primary same-size-220" value="{% trans 'Delete my evaluation' %}" style="margin: auto" />
-        <input type="button" class="btn btn-danger same-size-220" data-dismiss="modal" value="{% trans 'Cancel' %}" style="margin: auto;"/>
+    <form action="{% url 'assessment:delete-evaluation' evaluation.organisation.id evaluation.slug evaluation.pk %}" class="form" method='post'
+          role="form">
+        <div class="modal-header">
+            <h4 class="modal-title">{% trans "Are you sure you want to delete the evaluation?" %} </h4>
+            <button class="close" data-dismiss="modal" type="button">&times;</button>
+        </div>
+        <div class="modal-body-delete">
+            {% csrf_token %}
+            <p>{% blocktrans %}
+                The evaluation deletion is definitive. You would not be able to retrieve your answers and your score.
+                {% endblocktrans %}
+            </p>
+        </div>
+        <div class="modal-footer">
+            <input class="btn btn-primary same-size-220 margin-auto" type="submit"
+                   value="{% trans 'Delete my evaluation' %}"/>
+            <input class="btn btn-danger same-size-220 margin-auto" data-dismiss="modal" type="button"
+                   value="{% trans 'Cancel' %}"/>
 
-      </div>
+        </div>
     </form>
 
 
