--- a/platform_code/assessment/templates/assessment/edit-evaluation.html
+++ b/platform_code/assessment/templates/assessment/edit-evaluation.html
@@ -4,32 +4,33 @@
 
 <div>
 
-  <form  method='post' class="form" role="form" id="changeNameEval{{evaluation.id}}"
-        action="">
-    <div class="modal-header">
-        <h4 class="modal-title" >{% trans "Do you want to change the name of your evaluation?" %} </h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
+    <form action="" class="form" id="changeNameEval{{evaluation.id}}" method='post'
+          role="form">
+        <div class="modal-header">
+            <h4 class="modal-title">{% trans "Do you want to change the name of your evaluation?" %} </h4>
+            <button class="close" data-dismiss="modal" type="button">&times;</button>
+        </div>
         <div class="modal-body create-form width-50">
             <div class="column">
-            {% csrf_token %}
-            {% with eval_form=evaluation_form_dic|get_item_converted_str:evaluation.id %}
+                {% csrf_token %}
+                {% with eval_form=evaluation_form_dic|get_item_converted_str:evaluation.id %}
                 {% for field in eval_form %}
                 <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
-                    <span>{{ field.label}}</span>
-                    <p > {{field}} </p>
+                <span>{{ field.label}}</span>
+                <p> {{field}} </p>
                 {% endfor %}
-             {% endwith %}
+                {% endwith %}
             </div>
         </div>
-      <div class="modal-footer">
-        <input  type="button" data-dismiss="modal" class="btn btn-primary same-size-220 margin-auto" value="{% trans 'Cancel' %}"/>
-        <button onclick="changeNameEvaluation('changeNameEval{{evaluation.id}}', '{{evaluation.id}}')"
-               class="btn btn-modify same-size-220 margin-auto" type="button"
-                >{% trans "Change" %}
-        </button>
+        <div class="modal-footer">
+            <input class="btn btn-primary same-size-220 margin-auto" data-dismiss="modal" type="button"
+                   value="{% trans 'Cancel' %}"/>
+            <button class="btn btn-modify same-size-220 margin-auto"
+                    onclick="changeNameEvaluation('changeNameEval{{evaluation.id}}', '{{evaluation.id}}')" type="button"
+            >{% trans "Change" %}
+            </button>
 
-      </div>
+        </div>
     </form>
 
     <div id="confirmationchangeNameEval{{evaluation.id}}"></div>
