--- a/platform_code/assessment/templates/assessment/evaluation.html
+++ b/platform_code/assessment/templates/assessment/evaluation.html
@@ -11,19 +11,19 @@
     <span> ></span>
     <a href="{% url 'assessment:orga-summary' evaluation.organisation.id %}">{% trans 'Organisation' %}</a>
     <span> ></span>
-    <a href="#" class="active-breadcrumb">{% trans 'Evaluation' %}</a>
+    <a class="active-breadcrumb" href="#">{% trans 'Evaluation' %}</a>
 </div>
 
 {% if evaluation.is_upgradable %}
-    <div>
-        {% include "assessment/upgrade-banner.html" %}
-    </div>
+<div>
+    {% include "assessment/upgrade-banner.html" %}
+</div>
 {% endif %}
 
 {% if messages %}
 <ul class="messages margin-3em">
     {% for message in messages %}
-    <li {% if message.tags %} class=" alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+    <li class=" alert alert-{{ message.tags }}">{{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -32,71 +32,77 @@
     {% if organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
     <ul id='listTitle'>
         <li class="flex">
-            <h1 class="h1-section" id="evaluationName" >{{ evaluation.name }}
-            <button id="hiddenButton" class="btn btn-primary small-btn hidden-div"
-                    data-toggle="modal" data-target="#modal-edit{{evaluation.id}}">
-                <i class="fa fa-edit"></i>
-            </button>
+            <h1 class="h1-section" id="evaluationName">{{ evaluation.name }}
+                <button class="btn btn-primary small-btn hidden-div" data-target="#modal-edit{{evaluation.id}}"
+                        data-toggle="modal" id="hiddenButton">
+                    <i class="fa fa-edit"></i>
+                </button>
             </h1>
         </li>
     </ul>
     {% else %}
-        <h1 class="h1-section">{{ evaluation.name }}</h1>
+    <h1 class="h1-section">{{ evaluation.name }}</h1>
     {% endif %}
 
-    <div class="modal" id="modal-edit{{evaluation.id}}" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          {% include "assessment/edit-evaluation.html" %}
+    <div aria-hidden="true" class="modal" id="modal-edit{{evaluation.id}}">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                {% include "assessment/edit-evaluation.html" %}
+            </div>
         </div>
-      </div>
     </div>
     <div class="progress progress-eval margin-auto"
          title="{% blocktrans with progression=evaluation.calculate_progression %}{{ progression }}% done{% endblocktrans %}">
-      <div class="progress-bar " role="progressbar" aria-valuenow="{{evaluation.calculate_progression}}"
-           style="width:{{evaluation.calculate_progression}}%; background-color: #28a745;"
-           title="{% blocktrans with progression=evaluation.calculate_progression %}{{ progression }}% done{% endblocktrans %}"
-           aria-valuemin="0" aria-valuemax="100" >
-          {% if evaluation.calculate_progression != 0 %}
-                <p class="progress-bar-text" >{{evaluation.calculate_progression}}%</p>
-          {% endif %}
-      </div>
+        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="{{evaluation.calculate_progression}}"
+             class="progress-bar "
+             role="progressbar"
+             style="width:{{evaluation.calculate_progression}}%; background-color: #28a745;"
+             title="{% blocktrans with progression=evaluation.calculate_progression %}{{ progression }}% done{% endblocktrans %}">
+            {% if evaluation.calculate_progression != 0 %}
+            <p class="progress-bar-text">{{evaluation.calculate_progression}}%</p>
+            {% endif %}
+        </div>
         {% if evaluation.calculate_progression == 0 %}
-                <p class="progress-bar-text" >{{evaluation.calculate_progression}}%</p>
-          {% endif %}
+        <p class="progress-bar-text">{{evaluation.calculate_progression}}%</p>
+        {% endif %}
     </div>
-    <p class="center" style="margin-bottom: 0px;">{% trans "Creation date:" %} {{evaluation.created_at|format_date_calendar}}</p>
-    <p class="center" style="margin-bottom: 30px;">{% trans "Version" %} {{evaluation.assessment.version}}</p>
+    <p class="center" style="margin-bottom: 0px;">{% trans "Creation date:" %}
+        {{evaluation.created_at|format_date_calendar}}</p>
+    <p class="center margin-bot-30">{% trans "Version" %} {{evaluation.assessment.version}}</p>
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 </div>
 <main class="main-area">
     <div class="centered">
         <section class="cards-section">
             {% for section in section_list %}
-                {% include "assessment/base-card-section.html" %}
+            {% include "assessment/base-card-section.html" %}
             {% endfor %}
         </section>
     </div>
 </main>
-<div id="validation evaluation" >
+<div id="validation evaluation">
     {% if evaluation.is_finished %}
-        <div>
+    <div>
         <form action="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}">
-            <input type="submit" value="{% trans 'Validate and see the results' %}"
-                   class="btn btn-primary float-right bottom-page-button" />
+            <input class="btn btn-primary float-right bottom-page-button"
+                   type="submit"
+                   value="{% trans 'Validate and see the results' %}"/>
         </form>
-        </div>
+    </div>
     {% else %}
     <form action="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}">
-        <input type="submit" value="{% trans 'Validate and see the results' %}" disabled="True"
-               alt="{% trans 'Please finish the evaluation before validating it' %}"
+        <input alt="{% trans 'Please finish the evaluation before validating it' %}"
+               class="btn btn-primary float-right bottom-page-button"
+               disabled
                title="{% trans 'Please finish the evaluation before validating it' %}"
-               class="btn btn-primary float-right bottom-page-button"/>
+               type="submit"
+               value="{% trans 'Validate and see the results' %}"/>
     </form>
     {% endif %}
 </div>
 <form action="{% url 'assessment:orga-summary' organisation.id %}">
-    <input type="submit" value="{% trans 'Back to the organisation' %}" class="btn btn-primary float-left bottom-page-button"/>
+    <input class="btn btn-primary float-left bottom-page-button" type="submit"
+           value="{% trans 'Back to the organisation' %}"/>
 </form>
 
 <script>
@@ -109,6 +115,7 @@ $(document).ready(function(){
     $('#hiddenButton').addClass("hidden-div");
   });
 });
+
 
 </script>
 {% endblock %}
