--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
@@ -3,18 +3,32 @@
 {% load static %}
 
 <div>
-  <form  method='post' class="form" role="form" id="editRoleInvitation{{pending_member.id}}"
-        action="{% url 'assessment:orga-summary' organisation.id %}">
-    <div class="modal-header">
-        <h4 class="modal-title absolute-position" >{% trans "Edit invitation rights" %} </h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
+    <form action="{% url 'assessment:orga-summary' organisation.id %}"
+          class="form" id="editRoleInvitation{{pending_member.id}}" method='post'
+          role="form">
+        <div class="modal-header">
+            <h4 class="modal-title absolute-position">{% trans "Edit invitation rights" %} </h4>
+            <button class="close" data-dismiss="modal" type="button">&times;</button>
+        </div>
         <div class="modal-body">
             <p>{% trans "You can edit the rights you want to give to the future users:" %}</p>
             <ul>
-                <li class="li-with-disc">{% trans "<strong>Read-only user</strong>: the read-only user can only consult the evaluations, he cannot create, edit or delete one." %}</li>
-                <li class="li-with-disc">{% trans "<strong>Editor</strong>: the editor can create, modify and delete evaluations" %}</li>
-                <li class="li-with-disc">{% trans "<strong>Admin</strong>: the admin user can create, modify and delete evaluations and members." %}</li>
+                <li class="li-with-disc">
+                    {% blocktrans %}
+                    <strong>Read-only user</strong>: the read-only user can only consult
+                    the evaluations, he cannot create, edit or delete one.
+                    {% endblocktrans %}
+                </li>
+                <li class="li-with-disc">
+                    {% blocktrans %}
+                    <strong>Editor</strong>: the editor can create, modify and delete evaluations.
+                    {% endblocktrans %}
+                </li>
+                <li class="li-with-disc">
+                    {% blocktrans %}
+                    <strong>Admin</strong>: the admin user can create, modify and delete evaluations and members.
+                    {% endblocktrans %}
+                </li>
             </ul>
             <p>{% trans "Note that you cannot remove an user with admin rights from the organisation." %}</p>
             {% csrf_token %}
@@ -22,26 +36,27 @@
                 <div class="column full-width">
                     <div>
                         {% with edit_invitation_form=edit_invitation_role_form_dic|get_item_converted_str:pending_member.id %}
-                            {% for field in edit_invitation_form %}
-                            <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
-                                <span class="float-left">{{ field.label}}</span>
-                                <p > {{field}} </p>
-                            {% endfor %}
-                         {% endwith %}
+                        {% for field in edit_invitation_form %}
+                        <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
+                        <span class="float-left">{{ field.label}}</span>
+                        <p> {{field}} </p>
+                        {% endfor %}
+                        {% endwith %}
                     </div>
                 </div>
             </div>
         </div>
-      <div class="modal-footer self-center">
-          <button onclick="editRoleMember('editRoleInvitation{{pending_member.id}}', '{{pending_member.id}}', true)"
-                  class="btn btn-primary same-size-250 margin-auto margin-10" type="button">
-              {% trans "Change" %}
-          </button>
-          <button type="button" class="btn btn-danger same-size-250 margin-auto right-button"
-                data-dismiss="modal">{% trans 'Cancel' %}
-          </button>
+        <div class="modal-footer self-center">
+            <button class="btn btn-primary same-size-250 margin-auto margin-10"
+                    onclick="editRoleMember('editRoleInvitation{{pending_member.id}}', '{{pending_member.id}}', true)"
+                    type="button">
+                {% trans "Change" %}
+            </button>
+            <button class="btn btn-danger same-size-250 margin-auto right-button" data-dismiss="modal"
+                    type="button">{% trans 'Cancel' %}
+            </button>
 
-      </div>
+        </div>
     </form>
 
 </div>
