--- a/platform_code/assessment/templates/assessment/organisation/member/remove-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/remove-member.html
@@ -3,25 +3,32 @@
 
 <div class="content-modal-remove-member">
     <div class="modal-header">
-        <h4 class="modal-title" >{% trans "Are you sure you want to remove the user" %} {{member.user.email}} {% trans "from the organisation?" %} </h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">{% trans "Are you sure you want to remove the user" %} {{member.user.email}}
+            {% trans "from the organisation?" %}
+        </h4>
+        <button class="close" data-dismiss="modal" type="button">&times;</button>
     </div>
     <div class="modal-body-delete">
-        <p>{% trans "The user will not be able to consult the evaluations anymore. You may also edit his role within the organisation to limit the actions he can take." %}</p>
+        <p>{% blocktrans %}
+            The user will not be able to consult the evaluations anymore. You may also edit his role within the
+            organisation to limit the actions he can take.
+            {% endblocktrans %}
+        </p>
 
     </div>
 
     <div class="modal-footer self-center">
         <form action="{% url 'assessment:orga-summary' organisation.id %}"
-              method="post" id="removeMember{{member.id}}">
+              id="removeMember{{member.id}}" method="post">
             {% csrf_token %}
-            <button class="btn btn-primary same-size-250 margin-auto" type="button"
-                    onclick="removeMember('removeMember{{member.id}}', '{{member.id}}', false)">
+            <button class="btn btn-primary same-size-250 margin-auto"
+                    onclick="removeMember('removeMember{{member.id}}', '{{member.id}}', false)"
+                    type="button">
                 {% trans 'Yes' %}
             </button>
-            <button type="button" class="btn btn-danger same-size-250 margin-auto right-button"
-                data-dismiss="modal">{% trans 'Cancel' %}
-        </button>
+            <button class="btn btn-danger same-size-250 margin-auto right-button" data-dismiss="modal"
+                    type="button">{% trans 'Cancel' %}
+            </button>
         </form>
 
     </div>
