--- a/platform_code/assessment/templates/assessment/organisation/member/remove-pending-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/remove-pending-member.html
@@ -3,8 +3,8 @@
 
 <div class="content-modal-remove-pending-member">
     <div class="modal-header">
-        <h4 class="modal-title" >{% trans "Are you sure you want to delete the invitation?" %} </h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">{% trans "Are you sure you want to delete the invitation?" %} </h4>
+        <button class="close" data-dismiss="modal" type="button">&times;</button>
     </div>
     <div class="modal-body-delete">
         <p>{% trans "The user will not automatically join the organisation when his account is created." %}</p>
@@ -13,15 +13,16 @@
 
     <div class="modal-footer self-center">
         <form action="{% url 'assessment:orga-summary' organisation.id %}"
-              method="post" id="remove_pending_member{{pending_member.id}}">
+              id="remove_pending_member{{pending_member.id}}" method="post">
             {% csrf_token %}
-            <button class="btn btn-primary same-size-250 margin-auto" type="button"
-                    onclick="removeMember('remove_pending_member{{pending_member.id}}', '{{pending_member.id}}', true)">
+            <button class="btn btn-primary same-size-250 margin-auto"
+                    onclick="removeMember('remove_pending_member{{pending_member.id}}', '{{pending_member.id}}', true)"
+                    type="button">
                 {% trans 'Yes' %}
             </button>
-            <button type="button" class="btn btn-danger same-size-250 margin-auto right-button"
-                data-dismiss="modal">{% trans 'Cancel' %}
-        </button>
+            <button class="btn btn-danger same-size-250 margin-auto right-button" data-dismiss="modal"
+                    type="button">{% trans 'Cancel' %}
+            </button>
         </form>
 
     </div>
