--- a/platform_code/assessment/templates/assessment/organisation/organisation.html
+++ b/platform_code/assessment/templates/assessment/organisation/organisation.html
@@ -9,7 +9,7 @@
 <div class="breadcrumbs">
     <a href="{% url 'home:user-profile' %}">{% trans 'Dashboard' %}</a>
     <span> ></span>
-    <a href="#" class="active-breadcrumb">{% trans 'Organisation' %}</a>
+    <a class="active-breadcrumb" href="#">{% trans 'Organisation' %}</a>
 </div>
 
 <h1>{% trans "Organisation: " %}{{organisation.name}} </h1>
@@ -17,91 +17,93 @@
 {% if messages %}
 <ul class="messages margin-3em">
     {% for message in messages %}
-    <li {% if message.tags %} class=" alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+    <li class="alert alert-{{ message.tags }}" >{{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
 
-    <div class="row ">
-        <div class="col-ms-3 container-platform column-right">
-            <ul class="nav nav-pills nav-stacked flex-column table-column-profile" role="tablist" id="PillProfile">
-                <li class="nav-item column-button">
-                    <a class="nav-link profile-column active" role="tab" data-toggle="tab"
-                       aria-controls="content-eval" aria-selected="true" name="column-button"
-                       id="eval" href="#content-eval">{% trans "Evaluations" %}</a>
-                </li>
-                <li class="nav-item column-button">
-                    <a class="nav-link profile-column" role="tab" data-toggle="tab"
-                       aria-controls="content-members" aria-selected="true" name="column-button"
-                       id="members" href="#content-members">{% trans "Members" %}</a>
-                </li>
-                <li class="nav-item column-button">
-                    <a class="nav-link profile-column" role="tab" data-toggle="tab"
-                       aria-controls="content-settings" aria-selected="true" name="column-button"
-                       id="settings" href="#content-settings">{% trans "Organisation's parameters" %}</a>
-                </li>
-            </ul>
-        </div>
-        <div class="data">
-            <div class="tab-content"  id="PillProfileContent">
-
-               <div class="tab-pane active large-array" id="content-eval"
-                  role="tabpanel" aria-labelledby="tab-eval">
-                   {% include "assessment/organisation/orga-evaluation.html" %}
-
-               </div>
-               <div class="tab-pane fade" id="content-members"
-                  role="tabpanel" aria-labelledby="tab-members">
-                   {% include "assessment/organisation/member/orga-members.html" %}
-               </div>
-                <div class="tab-pane fade" id="content-settings"
-                  role="tabpanel" aria-labelledby="tab-settings">
-                   {% include "assessment/organisation/orga-settings.html" %}
-               </div>
-            </div>
-            </div>
+<div class="row ">
+    <div class="col-ms-3 container-platform column-right">
+        <ul class="nav nav-pills nav-stacked flex-column table-column-profile" id="PillProfile" role="tablist">
+            <li class="nav-item column-button">
+                <a aria-controls="content-eval" aria-selected="true" class="nav-link profile-column active"
+                   data-toggle="tab" href="#content-eval" id="eval"
+                   name="column-button" role="tab">{% trans "Evaluations" %}</a>
+            </li>
+            <li class="nav-item column-button">
+                <a aria-controls="content-members" aria-selected="true" class="nav-link profile-column"
+                   data-toggle="tab" href="#content-members" id="members"
+                   name="column-button" role="tab">{% trans "Members" %}</a>
+            </li>
+            <li class="nav-item column-button">
+                <a aria-controls="content-settings" aria-selected="true" class="nav-link profile-column"
+                   data-toggle="tab" href="#content-settings" id="settings"
+                   name="column-button" role="tab">{% trans "Organisation's parameters" %}</a>
+            </li>
+        </ul>
     </div>
+    <div class="data">
+        <div class="tab-content" id="PillProfileContent">
+
+            <div aria-labelledby="tab-eval" class="tab-pane active large-array"
+                 id="content-eval" role="tabpanel">
+                {% include "assessment/organisation/orga-evaluation.html" %}
+
+            </div>
+            <div aria-labelledby="tab-members" class="tab-pane fade"
+                 id="content-members" role="tabpanel">
+                {% include "assessment/organisation/member/orga-members.html" %}
+            </div>
+            <div aria-labelledby="tab-settings" class="tab-pane fade"
+                 id="content-settings" role="tabpanel">
+                {% include "assessment/organisation/orga-settings.html" %}
+            </div>
+        </div>
+    </div>
+</div>
 
 
-<div class="row bottom-page-button margin-70" >
+<div class="row bottom-page-button margin-70">
     <form action="{% url 'home:user-profile'  %}" class="margin-auto">
-        <input type="submit" value="{% trans 'Back to your dashboard' %}"
-               class="btn btn-primary same-size-280 " />
+        <input class="btn btn-primary same-size-280 " type="submit"
+               value="{% trans 'Back to your dashboard' %}"/>
     </form>
     {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor"%}
-        {% if last_version %}
-            <!-- Button to Open the Modal -->
-            <button type="button" class="btn btn-primary float-right same-size-280 margin-auto"
-                    data-toggle="modal"
-                    data-target="#modal-create-eval">
-                    {% trans "Start a new evaluation" %}
-            </button>
-        {% else %}
-            <button type="button" class="btn btn-primary float-right same-size-280 margin-auto" disabled
-                    title="{% trans 'We are sorry, there is no assessment available yet.' %}">
-                    {% trans "Start a new evaluation" %}
-            </button>
-        {% endif %}
+    {% if last_version %}
+    <!-- Button to Open the Modal -->
+    <button class="btn btn-primary float-right same-size-280 margin-auto" data-target="#modal-create-eval"
+            data-toggle="modal"
+            type="button">
+        {% trans "Start a new evaluation" %}
+    </button>
     {% else %}
-        <button type="button" class="btn btn-primary float-right same-size-280 margin-auto" disabled
-                    title="{% trans 'You do not have the right to do this action' %}">
-                    {% trans "Start a new evaluation" %}
-        </button>
+    <button class="btn btn-primary float-right same-size-280 margin-auto"
+            disabled
+            title="{% trans 'We are sorry, there is no assessment available yet.' %}"
+            type="button">
+        {% trans "Start a new evaluation" %}
+    </button>
+    {% endif %}
+    {% else %}
+    <button class="btn btn-primary float-right same-size-280 margin-auto"
+            disabled
+            title="{% trans 'You do not have the right to do this action' %}"
+            type="button">
+        {% trans "Start a new evaluation" %}
+    </button>
     {% endif %}
 </div>
 
 <!-- The Modal create evaluation -->
-<div class="modal" id="modal-create-eval" aria-hidden="true">
-  <div class="modal-dialog ">
-    <div class="modal-content">
+<div aria-hidden="true" class="modal" id="modal-create-eval">
+    <div class="modal-dialog ">
+        <div class="modal-content">
 
-      {% include "assessment/creation-evaluation-modal.html" %}
+            {% include "assessment/creation-evaluation-modal.html" %}
 
+        </div>
     </div>
-  </div>
 </div>
-
-
 
 
 {% endblock %}
