--- a/platform_code/assessment/templates/assessment/results.html
+++ b/platform_code/assessment/templates/assessment/results.html
@@ -10,7 +10,7 @@
     <span> ></span>
     <a href="{% url 'home:user-profile' %}">{% trans 'My evaluations' %}</a>
     <span> ></span>
-    <a href="#" class="active-breadcrumb">{% trans 'Results' %}</a>
+    <a class="active-breadcrumb" href="#">{% trans 'Results' %}</a>
 </div>
 
 {% if evaluation.is_upgradable %}
@@ -22,7 +22,7 @@
 {% if messages %}
 <ul class="messages margin-3em">
     {% for message in messages %}
-    <li {% if message.tags %} class=" alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+    <li class=" alert alert-{{ message.tags }}" >{{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -36,89 +36,108 @@
     <div class="progress progress-results mx-auto"
          data-value='{{evaluation_score}}'>
           <span class="progress-left progress-left-results">
-              <span class="progress-bar progress-bar-results border-primary" ></span>
-          </span>
-          <span class="progress-right progress-right-results">
               <span class="progress-bar progress-bar-results border-primary"></span>
           </span>
-          <div class="progress-value progress-value-results w-100 h-100
+        <span class="progress-right progress-right-results">
+              <span class="progress-bar progress-bar-results border-primary"></span>
+          </span>
+        <div class="progress-value progress-value-results w-100 h-100
            rounded-circle d-flex align-items-center justify-content-center">
             <div class="h2 font-weight-bold">{{evaluation_score}}<sup class="small"></sup></div>
-          </div>
+        </div>
     </div>
-        <!-- END -->
-<!--            Todo see how to adapt, it is kept as comment as it may be tricky to code again -->
-<!--        &lt;!&ndash; Display none but keep it because may be used later &ndash;&gt;-->
-<!--        <div class="row text-center mt-4" style="display: none">-->
-<!--          <div class="col-6 border-right">-->
-<!--            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Meilleure section</span>-->
-<!--          </div>-->
-<!--          <div class="col-6">-->
-<!--            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Section à améliorer</span>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; END &ndash;&gt;-->
-<!--      </div>-->
+    <!-- END -->
+    <!--            Todo see how to adapt, it is kept as comment as it may be tricky to code again -->
+    <!--        &lt;!&ndash; Display none but keep it because may be used later &ndash;&gt;-->
+    <!--        <div class="row text-center mt-4" style="display: none">-->
+    <!--          <div class="col-6 border-right">-->
+    <!--            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Meilleure section</span>-->
+    <!--          </div>-->
+    <!--          <div class="col-6">-->
+    <!--            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Section à améliorer</span>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--        &lt;!&ndash; END &ndash;&gt;-->
+    <!--      </div>-->
 
     <div class="margin-70 margin-bot-50">
-        <p class="">{% trans "The synthetic score is on a total of 100 theoretical maximum points for your full assessment. It provides an indication of the organization maturity level concerning a responsible and trustworthy data science. At the end of 2020, the 50/100 threshold can be considered a very advanced maturity level." %}
+        <p class="">{% blocktrans %}
+            The synthetic score is on a total of 100 theoretical maximum points for your full
+            assessment. It provides an indication of the organization maturity level concerning a responsible and
+            trustworthy data science. At the end of 2020, the 50/100 threshold can be considered a very advanced
+            maturity level.
+            {% endblocktrans %}
         </p>
-        <p class="">{% trans "The mechanism for calculating the score is described in the FAQ that you can consult " %}<a href="{% url 'home:faq' %}" title="{% trans 'FAQ' %}">{% trans "here." %}</a></p>
-        <p class="">{% trans "Note: the score is a synthetic indication, not an end in itself. In particular, we invite you to consult the resources associated with each assessment element, which are excellent entry points for building skills on your topics of interest." %}
+        <p class="">{% blocktrans %}
+            The mechanism for calculating the score is described in the FAQ that you can consult
+            {% endblocktrans %}<a href="{% url 'home:faq' %}" title="{% trans 'FAQ' %}">{% trans "here." %}</a></p>
+        <p class="">{% blocktrans %}
+            Note: the score is a synthetic indication, not an end in itself. In particular, we invite
+            you to consult the resources associated with each assessment element, which are excellent entry points for
+            building skills on your topics of interest.
+            {% endblocktrans %}
         </p>
     </div>
     <div class="row">
-        <form  action="{% url 'assessment:orga-summary' organisation.id %}" class="float-left margin-auto">
-            <input class="btn btn-primary same-size-220" type="submit" value="{% trans 'Back to the organisation summary' %}" />
+        <form action="{% url 'assessment:orga-summary' organisation.id %}" class="float-left margin-auto">
+            <input class="btn btn-primary same-size-220" type="submit"
+                   value="{% trans 'Back to the organisation summary' %}"/>
         </form>
 
         <form action="{{ evaluation.get_absolute_url }}" class="float-right margin-auto">
-            <input type="submit" value="{% trans 'Modify' %}" class="btn btn-primary same-size-220" />
+            <input class="btn btn-primary same-size-220" type="submit" value="{% trans 'Modify' %}"/>
         </form>
     </div>
     <div class="response margin-70" id="responses">
         <h2>{% trans "Your answers" %}</h2>
-    <!--    Need to create a new form, initiate with database, disable other choices-->
-            {% for element in evaluation_element_list %}
-                {% if element.master_evaluation_element.order_id == 1 %}
-                    <p>Section {{ element.section.master_section.order_id}}. {{ element.section.master_section.name }}
-                    </p>
-                {% endif %}
-                <div class="card ">
-                    <div class="card-header card-headers-results row" id="heading{{element.id}}">
-                        <p>Q{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} : {{element.master_evaluation_element.name}}
-                        </p>
-                    </div>
-                    <div class="card-content">
-                        {% if element.has_condition_on and element|is_not_applicable %}
-                            <div id="warningmessage{{element.id}}" class='alert alert-warning'>
-                                 {% trans 'You are not concerned by this evaluation element' %}
-                            </div>
-                        {% endif %}
-                       <div id="question-name" class="question-name margin-all-20">
-                          Q{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}{% trans ":" %}
-                          {{element.master_evaluation_element.question_text}}
-                       </div>
-                        {% if element.master_evaluation_element.question_type == "radio" %}
-                           <p class="italic margin-all-20"> R{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
-                              {% trans ": Please select one answer which best matches to your organisation situation" %}
-                           </p>
-
-                        {% elif element.master_evaluation_element.question_type == "checkbox"%}
-                            <p class="italic margin-all-20"> R{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
-                               {% trans ": Please select all the answers which best match to your organisation situation. Be careful, some combinations are not coherent" %}
-                            </p>
-
-                        {% endif %}
-
-                        {{ dic_form_results|get_item:element }}
-
-                    </div>
+        <!--    Need to create a new form, initiate with database, disable other choices-->
+        {% for element in evaluation_element_list %}
+        {% if element.master_evaluation_element.order_id == 1 %}
+        <p>Section {{ element.section.master_section.order_id}}. {{ element.section.master_section.name }}
+        </p>
+        {% endif %}
+        <div class="card ">
+            <div class="card-header card-headers-results row" id="heading{{element.id}}">
+                <p>Q{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} :
+                    {{element.master_evaluation_element.name}}
+                </p>
+            </div>
+            <div class="card-content">
+                {% if element.has_condition_on and element|is_not_applicable %}
+                <div class='alert alert-warning' id="warningmessage{{element.id}}">
+                    {% trans 'You are not concerned by this evaluation element' %}
                 </div>
-            {% endfor %}
+                {% endif %}
+                <div class="question-name margin-all-20" id="question-name">
+                    Q{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
+                    {% trans ":" %}
+                    {{element.master_evaluation_element.question_text}}
+                </div>
+                {% if element.master_evaluation_element.question_type == "radio" %}
+                <p class="italic margin-all-20">
+                    R{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
+                    {% trans ": Please select one answer which best matches to your organisation situation" %}
+                </p>
+
+                {% elif element.master_evaluation_element.question_type == "checkbox"%}
+                <p class="italic margin-all-20">
+                    R{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
+                    {% blocktrans %}
+                    : Please select all the answers which best match to your organisation situation. Be
+                    careful, some combinations are not coherent.
+                    {% endblocktrans %}
+                </p>
+
+                {% endif %}
+
+                {{ dic_form_results|get_item:element }}
+
+            </div>
+        </div>
+        {% endfor %}
     </div>
     <div>
-        <button class="btn btn-primary float-right" onclick="topFunction()" id="top-button"
+        <button class="btn btn-primary float-right" id="top-button" onclick="topFunction()"
                 title="{% trans 'Top of the page' %}">{% trans 'Top of the page' %}
         </button>
     </div>
