--- a/platform_code/assessment/templates/assessment/section.html
+++ b/platform_code/assessment/templates/assessment/section.html
@@ -12,7 +12,7 @@
     <span> ></span>
     <a href="{{ evaluation.get_absolute_url }}">{% trans 'Evaluation' %}</a>
     <span> ></span>
-    <a href="#" class="active-breadcrumb">{% trans 'Section' %} {{ page_obj.number }}</a>
+    <a class="active-breadcrumb" href="#">{% trans 'Section' %} {{ page_obj.number }}</a>
 </div>
 
 {% if evaluation.is_upgradable %}
@@ -21,10 +21,9 @@
 </div>
 {% endif %}
 
-<div id="mySidenav" class="sidenav">
+<div class="sidenav" id="mySidenav">
     {% include "assessment/sidebar.html" %}
 </div>
-
 
 
 <div class="main">
@@ -37,31 +36,34 @@
     </div>
 
     <form action="{{ evaluation.get_absolute_url }}">
-        <input type="submit" value="{% trans 'Back to the sections page' %}" class="btn btn-primary float-left"/>
+        <input class="btn btn-primary float-left" type="submit" value="{% trans 'Back to the sections page' %}"/>
     </form>
 
-    <div id="validation evaluation" >
+    <div id="validation evaluation">
 
-        <a id="temp-validation-button" class="btn btn-primary float-right display-none"
-                href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
-             >{% trans 'Validate and see the results' %}</a>
+        <a class="btn btn-primary float-right display-none"
+           href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
+           id="temp-validation-button"
+        >{% trans 'Validate and see the results' %}</a>
 
         {% if evaluation.is_finished %}
         <div>
-        <form action="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}">
-            <input type="submit" value="{% trans 'Validate and see the results' %}"
-                   class="btn btn-primary float-right validation-button"
-                    name="validation-button"/>
-        </form>
+            <form action="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}">
+                <input class="btn btn-primary float-right validation-button" name="validation-button"
+                       type="submit"
+                       value="{% trans 'Validate and see the results' %}"/>
+            </form>
         </div>
 
         {% else %}
         <form action="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}">
-            <input type="submit" value="{% trans 'Validate and see the results' %}" disabled="true"
-                   alt="{% trans 'Please finish the evaluation before validating it' %}"
-                   title="{% trans 'Please finish the evaluation before validating it' %}"
+            <input alt="{% trans 'Please finish the evaluation before validating it' %}"
+                   class="btn btn-primary float-right "
+                   disabled
                    name="validation-button"
-                   class="btn btn-primary float-right "/>
+                   title="{% trans 'Please finish the evaluation before validating it' %}"
+                   type="submit"
+                   value="{% trans 'Validate and see the results' %}"/>
         </form>
         {% endif %}
 
