--- a/platform_code/home/templates/home/creation-evaluation-mutli-orga-modal.html
+++ b/platform_code/home/templates/home/creation-evaluation-mutli-orga-modal.html
@@ -1,34 +1,35 @@
 {% load i18n %}
 
 <div class="create-modal">
-    <form id="create_evaluation_form" method='post' class="form" role="form">
+    <form class="form" id="create_evaluation_form" method='post' role="form">
         <div class="modal-header">
             <h4 class="modal-title absolute-position" id="myModalLabel">{% trans 'Create a new evaluation' %}</h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button class="close" data-dismiss="modal" type="button">&times;</button>
         </div>
         <div class="modal-body create-form width-50 ">
             <div class="column">
-            {% csrf_token %}
-            {% for field in new_evaluation_form %}
-            <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
+                {% csrf_token %}
+                {% for field in new_evaluation_form %}
+                <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
                 <span class="">{{ field.label }}</span>
                 <p> {{field}} </p>
-            {% endfor %}
-            <p class="" title="{% trans 'This number corresponds to the version of the assessment that is currently in use.' %}">
-                {% trans "Assessment version" %} : {{last_version}}
-            </p>
+                {% endfor %}
+                <p class=""
+                   title="{% trans 'This number corresponds to the version of the assessment that is currently in use.' %}">
+                    {% trans "Assessment version" %} : {{last_version}}
+                </p>
             </div>
         </div>
 
         <div class="modal-footer center" style="columns: 1;">
             <div class="column">
                 <div>
-                    <input type="submit" class="btn btn-primary same-size-250 margin-auto"
-                           value="{% trans 'Create a new evaluation' %}" />
+                    <input class="btn btn-primary same-size-250 margin-auto" type="submit"
+                           value="{% trans 'Create a new evaluation' %}"/>
                 </div>
                 <div class="margin-10">
-                    <input type="button" class="btn btn-danger same-size-250 margin-auto "
-                           data-dismiss="modal" value="{% trans 'Cancel' %}"/>
+                    <input class="btn btn-danger same-size-250 margin-auto " data-dismiss="modal"
+                           type="button" value="{% trans 'Cancel' %}"/>
                 </div>
             </div>
         </div>
