--- a/platform_code/home/templates/home/login-modal.html
+++ b/platform_code/home/templates/home/login-modal.html
@@ -3,35 +3,36 @@
 <div class="create-eval-modal">
     {% if login_form.errors %}
     <p>{% trans "Your username and password didn't match. Please try again." %}</p>
-  {% endif %}
-
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>{% trans "Your account doesn't have access to this page. To proceed,
-      please login with an account that has access." %}</p>
-    {% else %}
-      <p>{% trans "Please login to see this page." %}</p>
     {% endif %}
-  {% endif %}
-    <form id="user_login_form" method='post' class="form " role="form">
+
+    {% if next %}
+    {% if user.is_authenticated %}
+    <p>{% trans "Your account doesn't have access to this page. To proceed,
+        please login with an account that has access." %}</p>
+    {% else %}
+    <p>{% trans "Please login to see this page." %}</p>
+    {% endif %}
+    {% endif %}
+    <form class="form " id="user_login_form" method='post' role="form">
         <div class="modal-header">
             <h4 class="modal-title absolute-position" id="myModalLabel">{% trans "Login" %}</h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button class="close" data-dismiss="modal" type="button">&times;</button>
         </div>
         <div class=" create-form width-50">
             <div class="column">
                 {% csrf_token %}
                 <span class="margin-right: 9em;">{{ login_form.username.label_tag }}</span>
-                <p >{{ login_form.username }}</p>
+                <p>{{ login_form.username }}</p>
                 <span class="margin-right: 5em;">{{ login_form.password.label_tag }}</span>
                 <p>{{ login_form.password }}</p>
-                <div class="row padding-1 margin-auto" >
+                <div class="row padding-1 margin-auto">
                     <div>
-                        <input type="submit" class="btn btn-primary same-size-250" value="{% trans 'Validate' %}" />
+                        <input class="btn btn-primary same-size-250" type="submit" value="{% trans 'Validate' %}"/>
                     </div>
                     <div class="margin-10">
-                        <input type="hidden" name="next" value="{{ next }}" />
-                        <a class="btn btn-blue same-size-250" type="button" href="{% url 'home:signup' %}">{% trans "I haven't an account" %}</a>
+                        <input name="next" type="hidden" value="{{ next }}"/>
+                        <a class="btn btn-blue same-size-250" href="{% url 'home:signup' %}" type="button"
+                        >{% trans "I haven't an account" %}</a>
                     </div>
 
                 </div>
