--- a/platform_code/home/templates/home/login.html
+++ b/platform_code/home/templates/home/login.html
@@ -5,47 +5,46 @@
 
 {% block content %}
 
-<div class="login container form-center" >
-<!--    I don't know why it is not working -> TODO but manage by messages-->
+<div class="login container form-center">
+    <!--    I don't know why it is not working -> TODO but manage by messages-->
     {% if login_form.errors %}
     <p>{% trans "Your email and password didn't match. Please try again." %}</p>
-  {% endif %}
-
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>{% trans "Your account doesn't have access to this page. To proceed,
-      please login with an account that has access." %}</p>
-    {% else %}
-      <p>{% trans "Please login to see this page." %}</p>
     {% endif %}
-  {% endif %}
+
+    {% if next %}
+    {% if user.is_authenticated %}
+    <p>{% trans "Your account doesn't have access to this page. To proceed,
+        please login with an account that has access." %}</p>
+    {% else %}
+    <p>{% trans "Please login to see this page." %}</p>
+    {% endif %}
+    {% endif %}
 
 
-
-    <form id="user_login_form" method='post' class="form" role="form">
+    <form class="form" id="user_login_form" method='post' role="form">
         <div class="header">
-            <h1 class="title" >{% trans "Login" %}</h1>
+            <h1 class="title">{% trans "Login" %}</h1>
 
         </div>
         {% if message %}
 
-            <div class="alert {{message|get_key_by_position:0}}">{{message|get_value_by_position:0}} </div>
+        <div class="alert {{message|get_key_by_position:0}}">{{message|get_value_by_position:0}}</div>
 
         {% endif %}
         <div class="body margin-50 ">
             {% csrf_token %}
             <table class="margin-auto">
-              <tr >
-                <td class="margin-50">{{ login_form.username.label_tag }}</td>
-              </tr>
+                <tr>
+                    <td class="margin-50">{{ login_form.username.label_tag }}</td>
+                </tr>
                 <tr class="spaceUnder">
                     <td class="margin-50">{{ login_form.username }}</td>
                 </tr>
-              <tr >
-                <td class="margin-50">{{ login_form.password.label_tag }}</td>
+                <tr>
+                    <td class="margin-50">{{ login_form.password.label_tag }}</td>
 
-              </tr>
-                <tr class="spaceUnder" >
+                </tr>
+                <tr class="spaceUnder">
                     <td class="margin-50">{{ login_form.password }}</td>
                 </tr>
             </table>
@@ -54,12 +53,13 @@
         <div class="margin-50 row" style="columns: 1">
             <div class="column">
                 <div>
-                    <input type="submit" class="btn btn-primary same-size-280" value="{% trans 'Validate' %}" style="margin: auto" />
+                    <input class="btn btn-primary same-size-280" style="margin: auto" type="submit"
+                           value="{% trans 'Validate' %}"/>
                 </div>
                 <div class="margin-10">
-                    <input type="hidden" name="next" value="{{ next }}" />
-                    <a class="btn btn-blue same-size-280" type="button"
-                         href="{% url 'home:signup' %}">{% trans "I haven't an account" %}</a>
+                    <input name="next" type="hidden" value="{{ next }}"/>
+                    <a class="btn btn-blue same-size-280" href="{% url 'home:signup' %}"
+                       type="button">{% trans "I haven't an account" %}</a>
                 </div>
             </div>
 
