--- a/platform_code/home/templates/home/profile-orga-creation-modal.html
+++ b/platform_code/home/templates/home/profile-orga-creation-modal.html
@@ -1,33 +1,33 @@
 {% load i18n %}
 
 <div class="create-orga-modal">
-    <form id="orga-creation-form" method='post' class="form" role="form">
+    <form class="form" id="orga-creation-form" method='post' role="form">
         <div class="modal-header">
             <h4 class="modal-title absolute-position" id="myModalLabel">{% trans "Create a new organisation" %}</h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button class="close" data-dismiss="modal" type="button">&times;</button>
         </div>
         <div class="modal-body create-form width-50">
             {% csrf_token %}
             <div class="one-column">
-            {% for field in new_orga_form %}
-            <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
+                {% for field in new_orga_form %}
+                <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
                 <span>{{ field.label }}</span>
                 <p> {{field}} </p>
-            {% endfor %}
-                </div>
+                {% endfor %}
+            </div>
 
         </div>
         <div class="modal-footer center" style="columns: 1">
             <div class="column">
                 <div>
-                    <input id="orga-creation" type="submit" class="btn btn-primary same-size-250 margin-auto"
-                           value="{% trans 'Create the organisation' %}" style="margin: auto" />
-            </div>
-                <div class="margin-10">
-                    <input type="button" class="btn btn-danger same-size-250 margin-10 margin-auto"
-                           data-dismiss="modal" value="{% trans 'Cancel' %}" />
-            </div>
+                    <input class="btn btn-primary same-size-250 margin-auto" id="orga-creation" style="margin: auto"
+                           type="submit" value="{% trans 'Create the organisation' %}"/>
                 </div>
+                <div class="margin-10">
+                    <input class="btn btn-danger same-size-250 margin-10 margin-auto" data-dismiss="modal"
+                           type="button" value="{% trans 'Cancel' %}"/>
+                </div>
+            </div>
         </div>
     </form>
 </div>
