--- a/platform_code/home/templates/home/registration/password_reset_confirm.html
+++ b/platform_code/home/templates/home/registration/password_reset_confirm.html
@@ -4,19 +4,21 @@
 {% block content %}
 
 <div class="evaluation-title container">
-  {% if validlink %}
-    <h3  class="title-pills">{% trans "Change the password" %}</h3>
+    {% if validlink %}
+    <h3 class="title-pills">{% trans "Change the password" %}</h3>
     <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button class="btn btn-primary" type="submit">{% trans "Change the password" %}</button>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-primary" type="submit">{% trans "Change the password" %}</button>
     </form>
-  {% else %}
+    {% else %}
     <p>
-      {% trans "The password reset link was invalid, possibly because it has already been used.
-      Please request a new password reset." %}
+        {% blocktrans %}
+        The password reset link was invalid, possibly because it has already been used.
+        Please request a new password reset.
+        {% endblocktrans %}
     </p>
-  {% endif %}
+    {% endif %}
 
 </div>
 {% endblock %}
