--- a/platform_code/home/templates/home/registration/password_reset_done.html
+++ b/platform_code/home/templates/home/registration/password_reset_done.html
@@ -3,13 +3,19 @@
 
 {% block content %}
 <div class="evaluation-title container">
-  <p>
-    {% trans "We've emailed you instructions for setting your password, if an account exists with the email you entered." %}
-    {% trans "You should receive them shortly." %}
-  </p>
-  <p>
-    {% trans "If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder." %}
-  </p>
+    <p>
+        {% blocktrans %}
+        We've emailed you instructions for setting your password, if an account exists with the email you
+        entered.
+        {% endblocktrans %}
+        {% trans "You should receive them shortly." %}
+    </p>
+    <p>
+        {% blocktrans %}
+        If you don't receive an email, please make sure you've entered the address you registered with, and
+        check your spam folder.
+        {% endblocktrans %}
+    </p>
 </div>
 
 {% endblock %}
