--- a/platform_code/home/templates/home/settings-data.html
+++ b/platform_code/home/templates/home/settings-data.html
@@ -3,27 +3,27 @@
 {% load i18n %}
 
 <div>
-    <h3 class="settings-subtitle" >{% trans "My information" %}</h3>
-        {% if message %}
-            <div class="alert {{message|get_key_by_position:0}}">{{message|get_value_by_position:0}} </div>
-        {% endif %}
-        <div class="body form-center">
-            <div class="column">
-                <form id="form-user-data" method='post' action="#" >
-                    {% csrf_token %}
-                    {% for field in user_data_form %}
-                         <span class="float-left"
-                         >{% blocktrans with tag=field.label_tag %}{{tag}}{% endblocktrans %}</span>
-                        <p>{{ field }}</p>
-                    {% endfor %}
-                    <button type="button" onclick="submitUserSettingsDataForm('form-user-data')"
-                            class="btn btn-primary float-left ">{% trans "Modify" %}
-                    </button>
-                </form>
-            </div>
+    <h3 class="settings-subtitle">{% trans "My information" %}</h3>
+    {% if message %}
+    <div class="alert {{message|get_key_by_position:0}}">{{message|get_value_by_position:0}}</div>
+    {% endif %}
+    <div class="body form-center">
+        <div class="column">
+            <form action="#" id="form-user-data" method='post'>
+                {% csrf_token %}
+                {% for field in user_data_form %}
+                <span class="float-left"
+                >{% blocktrans with tag=field.label_tag %}{{tag}}{% endblocktrans %}</span>
+                <p>{{ field }}</p>
+                {% endfor %}
+                <button class="btn btn-primary float-left " onclick="submitUserSettingsDataForm('form-user-data')"
+                        type="button">{% trans "Modify" %}
+                </button>
+            </form>
         </div>
-        <div id="confirmation"></div>
-        <div id="error_messages"></div>
+    </div>
+    <div id="confirmation"></div>
+    <div id="error_messages"></div>
 </div>
 
 
