--- a/platform_code/home/templates/home/settings-delete.html
+++ b/platform_code/home/templates/home/settings-delete.html
@@ -4,28 +4,39 @@
 
 <p>{{err}}</p>
 
-<h3 class="settings-subtitle" >{% trans "Are you sure you want to delete your account?" %}</h3>
+<h3 class="settings-subtitle">{% trans "Are you sure you want to delete your account?" %}</h3>
 
 <p>{% trans "The organisations you are the only admin member will be deleted, as well as their evaluations." %}</p>
 
 <div class="">
-    <a class="btn btn-primary same-size-220 float-left" href="{% url 'home:user-profile-settings' %}" >{% trans "Cancel" %}</a>
-    <button class="btn btn-danger same-size-220 float-right" data-toggle="modal" data-target="#modal-delete-account">{% trans "Delete" %}</button>
+    <a class="btn btn-primary same-size-220 float-left" href="{% url 'home:user-profile-settings' %}"
+    >{% trans "Cancel"%}</a>
+    <button class="btn btn-danger same-size-220 float-right" data-target="#modal-delete-account" data-toggle="modal"
+    >{% trans "Delete" %}
+    </button>
 </div>
 
-<div class="modal" id="modal-delete-account" aria-hidden="true" >
+<div aria-hidden="true" class="modal" id="modal-delete-account">
     <div class="modal-dialog ">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">{% trans "Are you really sure you want to delete your account?" %}</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title" id="myModalLabel"
+                >{% trans "Are you really sure you want to delete your account?" %}</h4>
+                <button class="close" data-dismiss="modal" type="button">&times;</button>
             </div>
             <div class="modal-body">
-                <p>{% trans "The organisations you are the only admin member will be deleted, as well as their evaluations." %}</p>
+                <p>{% blocktrans %}
+                    The organisations you are the only admin member will be deleted, as well as their
+                    evaluations.
+                    {% endblocktrans %}
+                </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary same-size-250 margin-auto" data-dismiss="modal" >{% trans "Cancel" %}</button>
-                <a class="btn btn-danger same-size-250 margin-auto" href="{% url 'home:delete-user' %}">{% trans "Delete my account" %}</a>
+                <button class="btn btn-primary same-size-250 margin-auto" data-dismiss="modal" type="button">
+                    {% trans "Cancel" %}
+                </button>
+                <a class="btn btn-danger same-size-250 margin-auto" href="{% url 'home:delete-user' %}">
+                    {% trans "Delete my account" %}</a>
             </div>
 
         </div>
