--- a/platform_code/templates/errors.html
+++ b/platform_code/templates/errors.html
@@ -3,32 +3,32 @@
 {% load i18n %}
 
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{% static 'image/favicon.ico' %}" rel="shortcut icon" type="image/png">
-    <link href="{% static 'js/jquery-3.5.1.min.js' %}" >
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}" defer></script>
-    <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}" defer></script>
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" type="text/css" rel="stylesheet" >
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}" defer></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}" defer></script>
-    <script src="{% static 'js/bootstrap.modal.js' %}" defer></script>
-    <link href="{% static 'js/jquery-3.5.1.min.js' %}" type="" rel="" >
-    <link href="{% static 'css/base.css' %}" type="text/css" rel="stylesheet" >
+    <link href="{% static 'js/jquery-3.5.1.min.js' %}">
+    <script defer src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script defer src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" rel="stylesheet" type="text/css">
+    <script defer src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script defer src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script defer src="{% static 'js/bootstrap.modal.js' %}"></script>
+    <link href="{% static 'js/jquery-3.5.1.min.js' %}" rel="" type="">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
 </head>
 
-<div style="text-align: center; ">
+<div class="center">
     <div id="image">
-        <img  src="{% static 'image/Substra_Logo_couleur_RVB.png' %}"
-              title="logo substra" alt="logo substra">
+        <img alt="logo substra" src="{% static 'image/Substra_Logo_couleur_RVB.png' %}" title="logo substra">
     </div>
     <div id="text">
         <h1>{{title}}</h1>
         <p>{{content}}</p>
     </div>
-    <a href="{% url 'home:homepage' %}" class="btn btn-primary card-button">{% trans "Homepage" %}</a>
+    <a class="btn btn-primary card-button" href="{% url 'home:homepage' %}">{% trans "Homepage" %}</a>
 </div>
